--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             </svg>
         </button>
     </navbar>
+    <header id="intro" class="row justify-content-center text-center" style="background-image:url('feu main.png')">
+        <h1><mark>NAME IT, <br class="d-block d-md-none"> WE COOL IT.</mark></h1>
+    </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous">
