--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top">
+    <nav class="navbar sticky-top">
         <a class="navbar-brand" href="#">
             <img src="hsu logo.png">
         </a>
