--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </button>
     </nav>
     <header id="intro" class="row justify-content-center text-center" style="background-image:url('feu main.png')">
-        <h1>NAME IT, <br class="d-block d-md-none"> WE COOL IT.<h1>
+        <h1>FEU DILIMAN <br class="d-block d-md-none"> MEDICAL CLINIC<h1>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
