--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top">
-        <a class="navbar-brand" href="#">
-            <img src="hsu logo.png">
-        </a>
-        <button class="btn btn-nav" onclick="redirect()">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
-                <path
-                    d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
-            </svg>
-        </button>
-    </nav>
-    <header id="intro" class="row justify-content-center text-center" style="background-image:url('feu main.png')">
-        <h1>FEU DILIMAN <br class="d-block d-md-none"> MEDICAL CLINIC<h1>
+    <header class="full row justify-content-center text-center" style="background-image:url('feu main.png')">
+        <nav class="navbar sticky-top">
+            <a class="navbar-brand" href="#">
+                <img src="hsu logo.png">
+            </a>
+            <button class="btn btn-nav" onclick="redirect()">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                    <path
+                        d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
+                </svg>
+            </button>
+        </nav>
+        <h1>FEU DILIMAN <br class="d-block d-md-none"> HEALTH SERVICES UNIT</h1>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
