--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="full row justify-content-center text-center" style="background-image:url('feu main.png')">
+    <div class="full row justify-content-center text-center" style="background-image:url('feu main.png')">
         <nav class="navbar sticky-top">
             <a class="navbar-brand" href="#">
                 <img src="hsu logo.png">
@@ -25,7 +25,8 @@
             </button>
         </nav>
         <h1>FEU DILIMAN <br class="d-block d-md-none"> HEALTH SERVICES UNIT</h1>
-    </header>
+        <h4 class="col-md-10 col-lg-9">filler text filler txt filler text filler text filler text filler text filler text filler text</h4>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous">
