--- a/index.html
+++ b/index.html
@@ -4,33 +4,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME || Health Services Unit - FEU Diliman</title>
+    <title>Health Services Unit - FEU Diliman</title>
     <!-- <link rel="icon" type="image/x-icon" href="watermark no-date smol.png"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="full row justify-content-center text-center" style="background-image:url('feu main.png')">
-        <nav class="navbar sticky-top">
+        <nav class="navbar navbar-expand-lg sticky-top">
             <a class="navbar-brand" href="#">
                 <img src="hsu logo.png">
             </a>
-            <button class="btn btn-nav" onclick="redirect()">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
-                    <path
-                        d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
-                </svg>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggle">
+                <span class="navbar-toggler-icon"></span>
             </button>
+            <div class="collapse navbar-collapse" id="toggle">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Branches</a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#annex">Annex Building</a></li>
+                      <li><a class="dropdown-item" href="#new">New Building</a></li>
+                    </ul>
+                  </li>      
+              </div>
         </nav>
         <h1>FEU DILIMAN <br class="d-block d-md-none"> HEALTH SERVICES UNIT</h1>
-        <h4 class="col-md-10 col-lg-9">filler text filler txt filler text filler text filler text filler text filler text filler text</h4>
+        <h4 class="col-md-10 col-lg-9">so something like "Your one-stop place for blablabal" and then the services below it?</h4>
     </div>
+    <div class="row justify-content-center text-center">
+        <p>beep beep beep beep beep</p>
+    </div>
+    <div class="full row justify-content-center text-center" style="background-image:url('feu main.png')">
+        <!--pic is just placeholder for now-->
+        <h1>BRANCHES</h1>
+        <div class="row" id="branch">
+
+        </div>
+    </div>
+    <div id="annex" class="full row justify-content-center text-center">
+        <h1>ANNEX BUILDING <br class="d-block d-md-none"> CLINIC</h1>
+    </div>
+    <div id="new" class="full row justify-content-center text-center">
+        <h1>NEW BUILDING <br class="d-block d-md-none"> CLINIC</h1>
+    </div>
+    <footer id="footer" class="justify-content-center text-center">sample footer<br>smth educational purposes smth
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
